Fixes #373, higher header z-index to overlap jcrop selections

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -42,7 +42,7 @@ $max-width: 1280px - $sidebar-width - $main-padding * 2 !default;
 // UI
 $common-shadow: 0 2px 0px #dddddd !default;
 $link-border: dotted 1px #ccc !default;
-$header-z: 150 !default; // This is to clear the crop image UI
+$header-z: 700 !default; // This is to clear the crop image UI
 
 /**
  * Bootstrap variables
